; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/extr_ti_hecc.c_ti_hecc_transceiver_switch.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/extr_ti_hecc.c_ti_hecc_transceiver_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_hecc_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ti_hecc_priv*, i32)* @ti_hecc_transceiver_switch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ti_hecc_transceiver_switch(%struct.ti_hecc_priv* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ti_hecc_priv*, align 8
  %5 = alloca i32, align 4
  store %struct.ti_hecc_priv* %0, %struct.ti_hecc_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.ti_hecc_priv*, %struct.ti_hecc_priv** %4, align 8
  %7 = getelementptr inbounds %struct.ti_hecc_priv, %struct.ti_hecc_priv* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load %struct.ti_hecc_priv*, %struct.ti_hecc_priv** %4, align 8
  %16 = getelementptr inbounds %struct.ti_hecc_priv, %struct.ti_hecc_priv* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @regulator_enable(i32 %17)
  store i32 %18, i32* %3, align 4
  br label %24

19:                                               ; preds = %11
  %20 = load %struct.ti_hecc_priv*, %struct.ti_hecc_priv** %4, align 8
  %21 = getelementptr inbounds %struct.ti_hecc_priv, %struct.ti_hecc_priv* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @regulator_disable(i32 %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %19, %14, %10
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @regulator_enable(i32) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
